added functionality to get furthest and closest actors into the utility library

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+Sandbox/Intermediate/
+Sandbox/Saved/
 Sandbox/Saved/AutoScreenshot.png
 Sandbox/Saved/Autosaves/PackageRestoreData.json
 Sandbox/Intermediate/ReimportCache/3688439234.bin
