--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ Sandbox/Saved/Backup/ThirdPersonCharacter_2019-05-26-17-00-08.uasset
 Sandbox/Saved/Backup/MathLibrary_2019-05-26-16-31-47.uasset
 Sandbox/Saved/Backup/MathLibrary_2019-05-26-16-25-21.uasset
 Sandbox/Saved/Backup/JP_Utility_Library_2019-05-26-17-14-47.uasset
+*/SP_Utility_Library.zip
