--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ Sandbox/Saved/Backup/MathLibrary_2019-05-26-16-31-47.uasset
 Sandbox/Saved/Backup/MathLibrary_2019-05-26-16-25-21.uasset
 Sandbox/Saved/Backup/JP_Utility_Library_2019-05-26-17-14-47.uasset
 */SP_Utility_Library.zip
+SP_Utility_Library.zip
+PaintballSimulator/Binaries/Android/PaintballSimulator-armv7-es2.apk
