--- a/PaintballSimulator/Config/DefaultEngine.ini
+++ b/PaintballSimulator/Config/DefaultEngine.ini
@@ -123,7 +123,7 @@ r.SupportReversedIndexBuffers=True
 r.SupportMaterialLayers=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/VirtualRealityBP/Maps/StartupMap.StartupMap
+EditorStartupMap=/Game/Maps/PaintballField_Level.PaintballField_Level
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -132,7 +132,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/VirtualRealityBP/Maps/MotionControllerMap.MotionControllerMap
+GameDefaultMap=/Game/Maps/PaintballField_Level.PaintballField_Level
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Game/Xball_GameMode.Xball_GameMode_C
 GlobalDefaultServerGameMode=None
@@ -145,6 +145,15 @@ TargetedHardwareClass=Mobile
 AppliedTargetedHardwareClass=Mobile
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
+
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+PackageName=com.ShadyPractices.Xball
+bPackageDataInsideApk=True
+bAllowLargeOBBFiles=True
+bBuildForES31=True
+TargetSDKVersion=28
+bPackageForGearVR=True
+bRemoveOSIG=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -189,11 +198,4 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 
-[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-PackageName=com.ShadyPractices.Xball
-bPackageDataInsideApk=True
-bAllowLargeOBBFiles=True
-bBuildForES31=True
-TargetSDKVersion=28
-bPackageForGearVR=True
-bRemoveOSIG=True
+
