--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,6 @@ Sandbox/Saved/Backup/JP_Utility_Library_2019-05-26-17-14-47.uasset
 */SP_Utility_Library.zip
 SP_Utility_Library.zip
 PaintballSimulator/Binaries/Android/PaintballSimulator-armv7-es2.apk
+Melee/Build/
+Melee/Binaries/Android/Melee-armv7-es2.so
+Melee/Binaries/Android/Melee-armv7-es2.apk
