removals and config changes

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,8 @@ Melee/Build/
 Melee/Binaries/Android/Melee-armv7-es2.so
 Melee/Binaries/Android/Melee-armv7-es2.apk
 *_BuiltData.uasset
+VR_Cyber_Ninja_vOculus.zip
+VR_Cyber_Ninja_v423.zip
+*.zip
+ActiveShooter/Binaries/
+ActiveShooter/Build/
